fixed clipping pathh of title gradient

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,8 @@ a {
 h1 {
   background-image: linear-gradient(45deg, #efc7d0, #ff956e);
   background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
   -webkit-text-fill-color: transparent; 
   -moz-text-fill-color: transparent;
   font-family: 'Montserrat';
